# Needle_DB

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile.cpp  Dockerfile.python  Documentation.txt  LICENSE  PROTOCOL.md  README.md  app_gui.py  changes_made.txt  docker-compose.yml  env_cpp.txt  process.txt  snippets.cpp  vectordb_architecture_overview.md
app/: rag_chatbot.py
client/: vecdb_client.py
data/: database.vdb
data/documents/: kb_ai_ml.txt  kb_python.txt  random_topics.txt
include/: command_parser.h  env_config.hpp  file_manager.h  ivf.h  similarities.hpp  types.h  vector_server.h  vector_store.h
pipeline/: embedder.py  ingestor.py  searcher.py
src/: command_parser.cpp  file_manager.cpp  file_manager.h  ivf.cpp  ivf.h  main.cpp  main_test.cpp  vector_server.cpp  vector_store.cpp  vector_store.h
tests/: file_test.cpp  file_test.h  test_file_manager.cpp  test_vector_server.cpp  test_vector_store.cpp  test_vectors.json
tests/integration/: generate_embeddings.py  test_file_manager.h  test_payload.txt  testing_data.txt
tests/test_data/: test.txt  test_vectors.json
